@@ -8,6 +8,10 @@
 #include "ribofit.hh"
 #include "zip.hh"
 
+#if defined( _GLIBCXX_USE_FLOAT128 ) && ! defined(__clang__)
+#  include "quadmath.hh"
+#endif
+
 #include <cmath>
 #include <fstream>
 #include <memory>
